--- a/package.json
+++ b/package.json
@@ -1,23 +1,17 @@
 {
-  "name": "leaflet",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "dependencies": {
-    "leaflet.markercluster": "^0.5.0"
-  },
-  "devDependencies": {},
+  "name": "landing",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/DaniOtero/leaflet-demo.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/DaniOtero/leaflet-demo/issues"
-  },
-  "homepage": "https://github.com/DaniOtero/leaflet-demo#readme"
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0",
+    "vite": "^4.4.5"
+  }
 }
