--- a/package.json
+++ b/package.json
@@ -1,17 +1,38 @@
 {
-  "name": "landing",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "landwind",
+  "version": "1.0.0",
+  "description": "Landwind is a free and open-source landing page built with Tailwind CSS and Flowbite for SaaS and product websites.",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/themesberg/landwind.git"
+  },
+  "keywords": [
+    "landing",
+    "page",
+    "tailwind",
+    "tailwind",
+    "css",
+    "flowbite",
+    "responsive",
+    "html",
+    "css",
+    "javascript",
+    "design"
+  ],
+  "author": "Themesberg",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/themesberg/landwind/issues"
+  },
+  "homepage": "https://github.com/themesberg/landwind#readme",
   "devDependencies": {
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0",
-    "vite": "^4.4.5"
+    "tailwindcss": "^3.1.4"
+  },
+  "dependencies": {
+    "flowbite": "^1.4.7"
   }
 }
